Refatoração das rotas e criação do perfil de técnico
Aparentemente é mais seguro armazenar o token de acesso em um HttpOnly cookie do que no local storage.
