# routes/project.js
@@ -1,0 +1,69 @@
+const { ProjectService } = require('../services')
+const projectService = new ProjectService();
+const verifyJWT = require('../config/configJWT');
+const express = require('express');
+
+const router = express.Router();
+
+router.post('/', verifyJWT, async (req, res) => {
+    try {
+        const result = await projectService.insertProject({ ...req.body, token: req.cookies['x-access-token'] });
+        res.status(200).json(result);
+    } catch (err) {
+        console.log(err);
+        (err.code) ?
+            res.status(500).json({ message: "Server Internal Error." }) :
+            res.status(500).json({ message: err.message });
+    }
+})
+
+router.get('/', verifyJWT, async (req, res) => {
+    try {
+        const result = await projectService.getProjects(req.cookies['x-access-token']);
+        res.status(200).json(result);
+    } catch (err) {
+        console.log(err);
+        (err.code) ?
+            res.status(500).json({ message: "Server Internal Error." }) :
+            res.status(500).json({ message: err.message });
+    }
+})
+
+router.put('/', verifyJWT, async (req, res) => {
+    try {
+        const result = await projectService.updateProject({ ...req.body, token: req.cookies['x-access-token'] });
+        res.status(200).json(result);
+    } catch (err) {
+        console.log(err);
+        (err.code) ?
+            res.status(500).json({ message: "Server Internal Error." }) :
+            res.status(500).json({ message: err.message });
+    }
+})
+
+router.delete('/:id', verifyJWT, async (req, res) => {
+    try {
+        const result = await projectService.deleteProject({ ...req.params, token: req.cookies['x-access-token'] });
+        res.status(200).json(result);
+    } catch (err) {
+        console.log(err);
+        (err.code) ?
+            res.status(500).json({ message: "Server Internal Error." }) :
+            res.status(500).json({ message: err.message });
+    }
+})
+
+router.get('/:id', verifyJWT, async (req, res) => {
+    try {
+        const result = await projectService.getProjectById({ ...req.params, token: req.cookies['x-access-token'] });
+        res.status(200).json(result);
+    } catch (err) {
+        console.log(err);
+        (err.code) ?
+            res.status(500).json({ message: "Server Internal Error." }) :
+            res.status(500).json({ message: err.message });
+    }
+})
+
+
+module.exports = router;
